# FinInsight-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: chat.py  document.py  health.py
app/core/: llm_factory.py
app/models/: request.py  response.py
app/services/: document_parser.py  document_splitter.py  embedding_service.py  keyword_validator.py  query_rewriter_service.py  rag_agent_service.py  reranker_service.py  search_service.py  vector_store_service.py
app/tools/: __init__.py  knowledge_tool.py
app/utils/: logger.py
enterprise_rag_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_evaluation.py
