[project]
name = "enterprise-rag-service"
version = "1.0.0"
description = "金融研报 RAG 智能分析 Agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-qwq>=0.3.4",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "pdfplumber>=0.11.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"